--- a/factory/index_template.html
+++ b/factory/index_template.html
@@ -8,6 +8,7 @@
 <body>
 <h1>Swiftians</h1>
 <h3>All Tips by Title</h3>
+<p><a href="introduction.html">Introduction</a></p>
 <?nextrec?>
 <p><a href="=$title&f$=.html">=$title$=</a></p>
 <?loop?>
