--- a/factory/note_template.html
+++ b/factory/note_template.html
@@ -31,6 +31,8 @@
 <?endif?>
 
 <p>Contributed by =$author$= on =$date$=</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
 <?loop?>
