--- a/web/file-paths-and-urls.html
+++ b/web/file-paths-and-urls.html
@@ -50,5 +50,7 @@ let urlFour = URL(path)
 </code></pre>
 
 <p>Contributed by Herb Bowie on </p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
