--- a/web/format-a-number-as-a-string-with-leading-zeros.html
+++ b/web/format-a-number-as-a-string-with-leading-zeros.html
@@ -26,5 +26,7 @@ let str = String(format: "%02d", 2)
 </code></pre>
 
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
