--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Swiftians</h1>
 <h3>All Tips by Title</h3>
+<p><a href="introduction.html">Introduction</a></p>
 <p><a href="app-and-bundle-identifiers.html">App and Bundle Identifiers</a></p>
 <p><a href="appkit-controls.html">AppKit Controls</a></p>
 <p><a href="apple-developer-program.html">Apple Developer Program</a></p>
