--- a/web/log-noise.html
+++ b/web/log-noise.html
@@ -19,5 +19,7 @@ Apple Developer Forums
 </a></p>
 
 <p>Contributed by Herb Bowie on 01 Nov 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
