--- a/web/position-one-view-within-another-using-anchors.html
+++ b/web/position-one-view-within-another-using-anchors.html
@@ -37,5 +37,7 @@ gridView!.bottomAnchor.constraint(equalTo: parentView.bottomAnchor, constant: -8
 </code></pre>
 
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
