--- a/web/responder-chain.html
+++ b/web/responder-chain.html
@@ -21,5 +21,7 @@ Apple Developer Docs
 </a></p>
 
 <p>Contributed by  on </p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
