--- a/web/singleton.html
+++ b/web/singleton.html
@@ -47,5 +47,7 @@ class MasterCollection {
 </code></pre>
 
 <p>Contributed by  on </p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
