--- a/web/app-and-bundle-identifiers.html
+++ b/web/app-and-bundle-identifiers.html
@@ -21,5 +21,7 @@ Cocoacasts
 </a></p>
 
 <p>Contributed by Herb Bowie on 26 Sep 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
