--- a/web/apple-developer-program.html
+++ b/web/apple-developer-program.html
@@ -19,5 +19,7 @@ Apple Developer Site
 </a></p>
 
 <p>Contributed by  on </p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
