--- a/web/build-a-workspace.html
+++ b/web/build-a-workspace.html
@@ -27,5 +27,7 @@ Odd Networks on Medium
 </a></p>
 
 <p>Contributed by Herb Bowie on 26 Sep 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
