--- a/web/computed-properties.html
+++ b/web/computed-properties.html
@@ -56,5 +56,7 @@ someObject.someProperty = "A new value for the property"
 </code></pre>
 
 <p>Contributed by Herb Bowie on 28 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
