--- a/web/contribute-to-a-github-project.html
+++ b/web/contribute-to-a-github-project.html
@@ -19,5 +19,7 @@ Rob Allen's DevNotes
 </a></p>
 
 <p>Contributed by Herb Bowie on 26 Sep 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
