--- a/web/delete-a-file-or-folder.html
+++ b/web/delete-a-file-or-folder.html
@@ -42,5 +42,7 @@ do {
 </code></pre>
 
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
