--- a/web/display-an-alert-asking-for-user-confirmation.html
+++ b/web/display-an-alert-asking-for-user-confirmation.html
@@ -39,5 +39,7 @@ if response == .alertFirstButtonReturn {
 </code></pre>
 
 <p>Contributed by Herb Bowie on 28 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
