--- a/web/do-things-with-the-file-system.html
+++ b/web/do-things-with-the-file-system.html
@@ -33,5 +33,7 @@ do {
 </code></pre>
 
 <p>Contributed by Herb Bowie on 28 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
