--- a/web/dont-forget-to-super.html
+++ b/web/dont-forget-to-super.html
@@ -20,5 +20,7 @@ The Swift Programming Language
 </a></p>
 
 <p>Contributed by  on </p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
