--- a/web/establish-communication-between-a-window-controller-and-its-view-controller.html
+++ b/web/establish-communication-between-a-window-controller-and-its-view-controller.html
@@ -27,5 +27,7 @@ vc.window = customWindowController
 </code></pre>
 
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
