--- a/web/extract-a-piece-of-a-date.html
+++ b/web/extract-a-piece-of-a-date.html
@@ -30,5 +30,7 @@ let dayOfWeek = gregCalendar.component(.weekday, from: now)
 </code></pre>
 
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
