--- a/web/how-to-make-a-swift-framework.html
+++ b/web/how-to-make-a-swift-framework.html
@@ -18,5 +18,7 @@ The Swift Dev
 </a></p>
 
 <p>Contributed by Herb Bowie on 26 Sep 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
