--- a/web/make-a-control-the-first-responder.html
+++ b/web/make-a-control-the-first-responder.html
@@ -31,5 +31,7 @@ confirmedWindow.makeFirstResponder(searchField)
 </code></pre>
 
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
