--- a/web/obtain-information-about-a-file.html
+++ b/web/obtain-information-about-a-file.html
@@ -36,5 +36,7 @@ catch let error as NSError {
 </code></pre>
 
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
