--- a/web/prompt-the-user-to-choose-create-files-and-directories.html
+++ b/web/prompt-the-user-to-choose-create-files-and-directories.html
@@ -23,5 +23,7 @@ Apple Documentation Archive
 </a></p>
 
 <p>Contributed by Herb Bowie on 28 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
