--- a/web/set-breakpoints.html
+++ b/web/set-breakpoints.html
@@ -19,5 +19,7 @@ Yay It's Erica on Medium
 </a></p>
 
 <p>Contributed by  on </p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
