--- a/web/show-the-user-a-check-box.html
+++ b/web/show-the-user-a-check-box.html
@@ -50,5 +50,7 @@ titleCkBox.state = NSControl.StateValue.on
 </code></pre>
 
 <p>Contributed by  on </p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
