--- a/web/show-the-user-a-combo-box.html
+++ b/web/show-the-user-a-combo-box.html
@@ -21,5 +21,7 @@ Apple Developer Docs
 </a></p>
 
 <p>Contributed by Herb Bowie on 28 Oct 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
