--- a/web/store-and-retrieve-user-preferences.html
+++ b/web/store-and-retrieve-user-preferences.html
@@ -41,5 +41,7 @@ let age = defaults.integer(forKey: "Age")
 </code></pre>
 
 <p>Contributed by Herb Bowie on 26 Sep 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
