--- a/web/token-fields.html
+++ b/web/token-fields.html
@@ -25,5 +25,7 @@ Apple Human Interface Guidelines
 </a></p>
 
 <p>Contributed by Herb Bowie on 26 Sep 2019</p>
+
+<p>Return to the <a href="index.html">home page</a></p>
 </body>
 </html>
