--- a/web/index.html
+++ b/web/index.html
@@ -2,10 +2,25 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Swiftians</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
+	<link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Swiftians</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+Swiftians
+</div>
+</div>
+</div>
+<div id="content">
 <h3>All Tips by Title</h3>
 <p><a href="tips/introduction.html">Introduction</a></p>
 <p><a href="tips/app-and-bundle-identifiers.html">App and Bundle Identifiers</a></p>
@@ -51,5 +66,7 @@
 <p><a href="tips/token-fields.html">Token Fields</a></p>
 <p><a href="tips/try-and-catch.html">Try and Catch</a></p>
 <p><a href="tips/vapor.html">Vapor</a></p>
+</div>
+</div>
 </body>
 </html>
