--- a/web/tips/dont-forget-to-super.html
+++ b/web/tips/dont-forget-to-super.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Don't Forget to Super | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Don't Forget to Super</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Don't Forget to Super</h3>
 
 <p>Tags: Swift</p>
 
-<p>Type: </p>
 
 <p>When overriding a function provided by an API, don’t forget to insert a super call to the API being overridden, unless you are sure you want to completely dispense with whatever functionality is provided by the overridden class.</p>
 <p>A failure to add a super call will not be flagged by Xcode, and will often cause problems, if it is done unintentionally or forgetfully.</p>
@@ -22,5 +37,7 @@ The Swift Programming Language
 <p>Contributed by  on </p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
