--- a/web/tips/extract-a-piece-of-a-date.html
+++ b/web/tips/extract-a-piece-of-a-date.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Extract a Piece of a Date | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Extract a Piece of a Date</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Extract a Piece of a Date</h3>
 
 <p>Tags: Foundation, date</p>
 
-<p>Type: </p>
 
 <p>Class: NSCalendar</p>
 <p>You need to pass the desired date to a Calendar instance and indicate which component you’re interested in. </p>
@@ -32,5 +47,7 @@ let dayOfWeek = gregCalendar.component(.weekday, from: now)
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
