--- a/web/tips/file-paths-and-urls.html
+++ b/web/tips/file-paths-and-urls.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>File Paths and URLs | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>File Paths and URLs</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>File Paths and URLs</h3>
 
 <p>Tags: Foundation, file, path, url</p>
 
-<p>Type: </p>
 
 <p>Class: URL</p>
 <p>It’s good to keep in mind that you can actually point to a file or folder programmatically in three distinct ways:</p>
@@ -52,5 +67,7 @@ let urlFour = URL(path)
 <p>Contributed by Herb Bowie on </p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
