--- a/web/tips/log-noise.html
+++ b/web/tips/log-noise.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Log Noise | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Log Noise</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Log Noise</h3>
 
 <p>Tags: log messages</p>
 
-<p>Type: </p>
 
 <p>I recently saw a frequently recurring log message starting to pop up in the logs for my Mac app Notenik. I couldn’t find any info on the Web about the message, so I filed a Technical Support Incident with Apple. Their response was to write it off as Log Noise. See the Apple Developer Forums discussion for more info on the topic.</p>
 
@@ -21,5 +36,7 @@ Apple Developer Forums
 <p>Contributed by Herb Bowie on 01 Nov 2019</p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
