--- a/web/tips/make-a-control-the-first-responder.html
+++ b/web/tips/make-a-control-the-first-responder.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Make a Control the First Responder | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Make a Control the First Responder</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Make a Control the First Responder</h3>
 
 <p>Tags: AppKit, responder</p>
 
-<p>Type: </p>
 
 <p>Class: NSWindow</p>
 <p>The first responder within a given window is also the responder (aka control) that has the focus for user input. In other words, it is the first control that will respond to user actions, including keyboard input.</p>
@@ -33,5 +48,7 @@ confirmedWindow.makeFirstResponder(searchField)
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
