--- a/web/tips/server-side-swift-development.html
+++ b/web/tips/server-side-swift-development.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Server-Side Swift Development | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Server-Side Swift Development</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Server-Side Swift Development</h3>
 
 <p>Tags: server, web</p>
 
-<p>Type: </p>
 
 <p>Swift can run on Linux as well as macOS, and can be used to develop Web applications.</p>
 <p>There are several different Web frameworks for Swift, but Vapor seems to be the most popular, especially with developers working outside of a large enterprise environment.</p>
@@ -19,5 +34,7 @@
 <p>Contributed by  on </p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
