--- a/web/tips/singleton.html
+++ b/web/tips/singleton.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Singleton | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Singleton</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Singleton</h3>
 
 <p>Tags: Swift</p>
 
-<p>Type: </p>
 
 <p>The singleton pattern is a software design pattern that restricts the instantiation of a class to one single instance. This is useful when exactly one object is needed to coordinate actions across a system. Apple makes use of the singleton pattern for the FileManager and UserDefaults classes, as examples. But the Swift language makes it easy for you to write your own singletons as well. </p>
 <p>Note that the single static instance of a singleton class is usually named ‘shared’ or ‘standard’ or ‘default’. </p>
@@ -49,5 +64,7 @@ class MasterCollection {
 <p>Contributed by  on </p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
