--- a/web/tips/create-a-scrolling-text-view.html
+++ b/web/tips/create-a-scrolling-text-view.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Create a Scrolling Text View | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Create a Scrolling Text View</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Create a Scrolling Text View</h3>
 
 <p>Tags: AppKit</p>
 
@@ -52,5 +68,7 @@ scrollView.documentView = textView
 <p>Contributed by  on </p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
