--- a/web/tips/delete-a-file-or-folder.html
+++ b/web/tips/delete-a-file-or-folder.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Delete a File or Folder | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Delete a File or Folder</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Delete a File or Folder</h3>
 
 <p>Tags: Foundation, files</p>
 
-<p>Type: </p>
 
 <p>Class: NSFileManager</p>
 <p>You can use the NSFileManager.default singleton to delete a file or folder, but you should be aware that there are two different options here.</p>
@@ -44,5 +59,7 @@ do {
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
