--- a/web/tips/format-a-number-as-a-string-with-leading-zeros.html
+++ b/web/tips/format-a-number-as-a-string-with-leading-zeros.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Format a Number as a String with Leading Zeros | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Format a Number as a String with Leading Zeros</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Format a Number as a String with Leading Zeros</h3>
 
 <p>Tags: Foundation, number, string</p>
 
-<p>Type: </p>
 
 <p>Class: String</p>
 <p>There is a special initializer for the String class that takes a format argument. </p>
@@ -28,5 +43,7 @@ let str = String(format: "%02d", 2)
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
