--- a/web/tips/introduction.html
+++ b/web/tips/introduction.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Introduction | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Introduction</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Introduction</h3>
 
 <p>Tags: intro</p>
 
-<p>Type: </p>
 
 <p>Sometime around the beginning of 2019 I decided I wanted to learn the Swift programming language and use it to write my first completely native Mac application.</p>
 <p>You can find out more about the application I developed at <a href="https://notenik.net">Notenik.net</a>, and see the source code on <a href="https://github.com/hbowie/notenik-swift">GitHub</a>.</p>
@@ -34,5 +49,7 @@
 <p>Contributed by Herb Bowie on 27 Nov 2019</p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
