--- a/web/tips/position-one-view-within-another-using-anchors.html
+++ b/web/tips/position-one-view-within-another-using-anchors.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Position One View within Another using Anchors | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Position One View within Another using Anchors</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Position One View within Another using Anchors</h3>
 
 <p>Tags: AppKit, anchors, views</p>
 
-<p>Type: </p>
 
 <p>Class: NSView</p>
 <p>Cocoa offers a number of different ways to set up your UI layouts. In many cases, you will want a flexible layout that will contract or expand along with the surrounding window, and parent view(s). </p>
@@ -39,5 +54,7 @@ gridView!.bottomAnchor.constraint(equalTo: parentView.bottomAnchor, constant: -8
 <p>Contributed by Herb Bowie on 21 Oct 2019</p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
