--- a/web/tips/prompt-the-user-to-choose-create-files-and-directories.html
+++ b/web/tips/prompt-the-user-to-choose-create-files-and-directories.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Prompt the User to Choose/Create Files and Directories | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Prompt the User to Choose/Create Files and Directories</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Prompt the User to Choose/Create Files and Directories</h3>
 
 <p>Tags: AppKit</p>
 
@@ -25,5 +41,7 @@ Apple Documentation Archive
 <p>Contributed by Herb Bowie on 28 Oct 2019</p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
