--- a/web/tips/represent-your-custom-class-instance-as-a-string.html
+++ b/web/tips/represent-your-custom-class-instance-as-a-string.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Represent your Custom Class Instance as a String | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Represent your Custom Class Instance as a String</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Represent your Custom Class Instance as a String</h3>
 
 <p>Tags: Swift</p>
 
@@ -37,5 +53,7 @@ let str = String(describing: customObject)
 <p>Contributed by Herb Bowie on 28 Oct 2019</p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
