--- a/web/tips/vapor.html
+++ b/web/tips/vapor.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>Vapor | Swiftians</title>
+  <link rel="icon" type="image/png" href="../favicon.png" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/equity_ta.css" type="text/css" />
+	<link rel="stylesheet" href="../fonts/concourse_t4.css" type="text/css" />
+	<link rel="stylesheet" href="../css/styles.css" type="text/css" />
+
 </head>
 <body>
-<h1>Vapor</h1>
+<div id="page-container">
+<div id="header">
+<div id="title-and-slogan">
+<div id="site-title">
+<a href="../index.html">Swiftians</a>
+</div>
+</div>
+</div>
+<div id="content">
+<h3>Vapor</h3>
 
 <p>Tags: server, web</p>
 
-<p>Type: </p>
 
 <p>Vapor is an open source web framework written in Swift.</p>
 
@@ -21,5 +36,7 @@ vapor.codes
 <p>Contributed by  on </p>
 
 <p>Return to the <a href="../index.html">Home Page</a></p>
+</div>
+</div>
 </body>
 </html>
