Added a Tip and switched Markdown parsers

--- a/web/index.html
+++ b/web/index.html
@@ -75,6 +75,7 @@
 <p><a href="tips/singleton.html">Singleton</a></p>
 <p><a href="tips/stop-your-running-project.html">Stop Your Running Project</a></p>
 <p><a href="tips/store-and-retrieve-user-preferences.html">Store and Retrieve User Preferences</a></p>
+<p><a href="tips/switching-from-cocoapods-to-swift-package-manager.html">Switching from CocoaPods to Swift Package Manager</a></p>
 <p><a href="tips/token-fields.html">Token Fields</a></p>
 <p><a href="tips/try-and-catch.html">Try and Catch</a></p>
 <p><a href="tips/vapor.html">Vapor</a></p>
