--- a/web/tips/app-and-bundle-identifiers.html
+++ b/web/tips/app-and-bundle-identifiers.html
@@ -38,10 +38,7 @@
 
 <p>Type: Concept</p>
 
-<p>App IDs and Bundle IDs are used to identify applications, as well as groups of applications. </p>
-<p>The terms often seem to be used interchangeably. </p>
-<p>Also see the <a href="https://help.apple.com/developer-account/#/dev1b35d6f83">Apple Developer Account Help page</a>.</p>
-
+<p>App IDs and Bundle IDs are used to identify applications, as well as groups of applications.</p><p>The terms often seem to be used interchangeably.</p><p>Also see the <a href="https://help.apple.com/developer-account/#/dev1b35d6f83">Apple Developer Account Help page</a>.</p>
 
 <p>Link: <a href="https://cocoacasts.com/what-are-app-ids-and-bundle-identifiers/">
 Cocoacasts
