--- a/web/tips/appkit-controls.html
+++ b/web/tips/appkit-controls.html
@@ -38,12 +38,7 @@
 
 <p>Type: Overview</p>
 
-<p>In addition to the official Apple reference, here are a couple of additiional sites with good info on most macOS controls:</p>
-<ul>
-<li><a href="https://www.raywenderlich.com/759-macos-controls-tutorial-part-1-2">macOS Controls Tutorial from Ray Wenderlich</a></li>
-<li><a href="https://pilky.me/appreciating-appkit-part-1/">Appreciating AppKit from Pilky.me</a></li>
-</ul>
-
+<p>In addition to the official Apple reference, here are a couple of additiional sites with good info on most macOS controls:</p><ul><li><a href="https://www.raywenderlich.com/759-macos-controls-tutorial-part-1-2">macOS Controls Tutorial from Ray Wenderlich</a></li><li><a href="https://pilky.me/appreciating-appkit-part-1/">Appreciating AppKit from Pilky.me</a></li></ul>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/views_and_controls">
 Apple Developer Documentation
