--- a/web/tips/contribute-to-a-github-project.html
+++ b/web/tips/contribute-to-a-github-project.html
@@ -38,8 +38,7 @@
 
 <p>Type: Auxiliary Info</p>
 
-<p>Rob Allen’s summary is helpful.</p>
-
+<p>Rob Allen's summary is helpful.</p>
 
 <p>Link: <a href="https://akrabat.com/the-beginners-guide-to-contributing-to-a-github-project/">
 Rob Allen's DevNotes
