--- a/web/tips/copy-objects-in-swift.html
+++ b/web/tips/copy-objects-in-swift.html
@@ -39,19 +39,7 @@
 <p>Type: API</p>
 
 <p>Protocol: NSCopying</p>
-<p>Here’s how to copy an object in Swift. </p>
-<ol>
-<li>
-<p>Have your custom class conform to the NSCopying protocol. </p>
-</li>
-<li>
-<p>Implement the ‘copy(with:)’ method in your custom class. </p>
-</li>
-<li>
-<p>Call ‘copy()’ on your object. </p>
-</li>
-</ol>
-
+<p>Here's how to copy an object in Swift.</p><ol><li>Have your custom class conform to the NSCopying protocol.</li></ol><ol start="2"><li>Implement the 'copy(with:)' method in your custom class.</li></ol><ol start="3"><li>Call 'copy()' on your object.</li></ol>
 
 <p>Sample Code: </p>
 <pre><code>
