--- a/web/tips/create-a-scrolling-text-view.html
+++ b/web/tips/create-a-scrolling-text-view.html
@@ -39,9 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: NSScrollView & NSTextView</p>
-<p>A scrolling text view is commonly required in applications, and Interface Builder provides an NSTextView configured just for this purpose. However, at times you may need to create a scrolling text view programmatically.</p>
-<p>See the <a href="https://developer.apple.com/library/archive/documentation/Cocoa/Conceptual/TextUILayer/Tasks/TextInScrollView.html">Apple Documentation Archive</a> for more useful info on this topic.</p>
-
+<p>A scrolling text view is commonly required in applications, and Interface Builder provides an NSTextView configured just for this purpose. However, at times you may need to create a scrolling text view programmatically.</p><p>See the <a href="https://developer.apple.com/library/archive/documentation/Cocoa/Conceptual/TextUILayer/Tasks/TextInScrollView.html">Apple Documentation Archive</a> for more useful info on this topic.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/nsscrollview">
 Apple Developer Docs for NSScrollView
