--- a/web/tips/display-an-alert-asking-for-user-confirmation.html
+++ b/web/tips/display-an-alert-asking-for-user-confirmation.html
@@ -39,9 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: NSAlert</p>
-<p>The NSAlert class can be used to display an alert. </p>
-<p>See this discussion on <a href="https://stackoverflow.com/questions/29433487/create-an-nsalert-with-swift">Stack Overflow</a> for more useful info on this topic.</p>
-
+<p>The NSAlert class can be used to display an alert.</p><p>See this discussion on <a href="https://stackoverflow.com/questions/29433487/create-an-nsalert-with-swift">Stack Overflow</a> for more useful info on this topic.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/nsalert">
 Apple Developer Docs
