--- a/web/tips/dont-forget-to-super.html
+++ b/web/tips/dont-forget-to-super.html
@@ -37,9 +37,7 @@
 <p><em>Tags: Swift</em></p>
 
 
-<p>When overriding a function provided by an API, don’t forget to insert a super call to the API being overridden, unless you are sure you want to completely dispense with whatever functionality is provided by the overridden class.</p>
-<p>A failure to add a super call will not be flagged by Xcode, and will often cause problems, if it is done unintentionally or forgetfully.</p>
-
+<p>When overriding a function provided by an API, don't forget to insert a super call to the API being overridden, unless you are sure you want to completely dispense with whatever functionality is provided by the overridden class.</p><p>A failure to add a super call will not be flagged by Xcode, and will often cause problems, if it is done unintentionally or forgetfully.</p>
 
 <p>Link: <a href="https://docs.swift.org/swift-book/LanguageGuide/Inheritance.html">
 The Swift Programming Language
