--- a/web/tips/establish-communication-between-a-window-controller-and-its-view-controller.html
+++ b/web/tips/establish-communication-between-a-window-controller-and-its-view-controller.html
@@ -38,9 +38,7 @@
 
 
 <p>Class: NSWindowController</p>
-<p>A View Controller doesn’t seem to have any built-in way to communicate with its window controller. </p>
-<p>On the other hand, a Window Controller can identify its Content View Controller. </p>
-
+<p>A View Controller doesn't seem to have any built-in way to communicate with its window controller.</p><p>On the other hand, a Window Controller can identify its Content View Controller.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/nswindowcontroller">
 Apple Developer Docs
