--- a/web/tips/extract-a-piece-of-a-date.html
+++ b/web/tips/extract-a-piece-of-a-date.html
@@ -38,8 +38,7 @@
 
 
 <p>Class: NSCalendar</p>
-<p>You need to pass the desired date to a Calendar instance and indicate which component you’re interested in. </p>
-
+<p>You need to pass the desired date to a Calendar instance and indicate which component you're interested in.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/foundation/nscalendar">
 Apple Developer Docs
