--- a/web/tips/help-screens-for-your-mac-application.html
+++ b/web/tips/help-screens-for-your-mac-application.html
@@ -38,17 +38,7 @@
 
 <p>Type: Auxiliary Info</p>
 
-<p>In order to create standard Help screens for your Mac application, you must do two things:</p>
-<ol>
-<li>
-<p>Create a Help Book</p>
-</li>
-<li>
-<p>Register the Help Book</p>
-</li>
-</ol>
-<p>See this <a href="https://developer.apple.com/library/archive/documentation/Carbon/Conceptual/ProvidingUserAssitAppleHelp/user_help_intro/user_assistance_intro.html#//apple_ref/doc/uid/TP30000903-CH204-CHDIDJFE">Apple Documentation Archive page</a> for further info.</p>
-
+<p>In order to create standard Help screens for your Mac application, you must do two things:</p><ol><li>Create a Help Book</li></ol><ol start="2"><li>Register the Help Book</li></ol><p>See this <a href="https://developer.apple.com/library/archive/documentation/Carbon/Conceptual/ProvidingUserAssitAppleHelp/user_help_intro/user_assistance_intro.html#//apple_ref/doc/uid/TP30000903-CH204-CHDIDJFE">Apple Documentation Archive page</a> for further info.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/nshelpmanager">
 Apple Developer Docs
