--- a/web/tips/log-noise.html
+++ b/web/tips/log-noise.html
@@ -37,8 +37,7 @@
 <p><em>Tags: log messages</em></p>
 
 
-<p>I recently saw a frequently recurring log message starting to pop up in the logs for my Mac app Notenik. I couldn’t find any info on the Web about the message, so I filed a Technical Support Incident with Apple. Their response was to write it off as Log Noise. See the Apple Developer Forums discussion for more info on the topic.</p>
-
+<p>I recently saw a frequently recurring log message starting to pop up in the logs for my Mac app Notenik. I couldn't find any info on the Web about the message, so I filed a Technical Support Incident with Apple. Their response was to write it off as Log Noise. See the Apple Developer Forums discussion for more info on the topic.</p>
 
 <p>Link: <a href="https://forums.developer.apple.com/message/355689#355689">
 Apple Developer Forums
