--- a/web/tips/obtain-information-about-a-file.html
+++ b/web/tips/obtain-information-about-a-file.html
@@ -38,9 +38,7 @@
 
 
 <p>Class: FileManager</p>
-<p>See Code Snippet.</p>
-<p>Also see the <a href="https://developer.apple.com/documentation/foundation/fileattributekey">Apple Developer Docs for FileAttributeKey</a>.</p>
-
+<p>See Code Snippet.</p><p>Also see the <a href="https://developer.apple.com/documentation/foundation/fileattributekey">Apple Developer Docs for FileAttributeKey</a>.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/foundation/filemanager/1410452-attributesofitem">
 Apple Developer Docs
