--- a/web/tips/position-one-view-within-another-using-anchors.html
+++ b/web/tips/position-one-view-within-another-using-anchors.html
@@ -38,10 +38,7 @@
 
 
 <p>Class: NSView</p>
-<p>Cocoa offers a number of different ways to set up your UI layouts. In many cases, you will want a flexible layout that will contract or expand along with the surrounding window, and parent view(s). </p>
-<p>One way to handle this is by using Anchors to position one view within another.</p>
-<p>See the code snippet for an example. Note that the constants provide some breathing room between your subview and the parent view. Note also that you will need negative numbers for the trailing and bottom anchors in order to achieve a consistent margin around your inner view on all four sides. </p>
-
+<p>Cocoa offers a number of different ways to set up your UI layouts. In many cases, you will want a flexible layout that will contract or expand along with the surrounding window, and parent view(s).</p><p>One way to handle this is by using Anchors to position one view within another.</p><p>See the code snippet for an example. Note that the constants provide some breathing room between your subview and the parent view. Note also that you will need negative numbers for the trailing and bottom anchors in order to achieve a consistent margin around your inner view on all four sides.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/nsview">
 Apple Developer Docs
