--- a/web/tips/prompt-the-user-to-choose-create-files-and-directories.html
+++ b/web/tips/prompt-the-user-to-choose-create-files-and-directories.html
@@ -39,11 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: NSOpenPanel</p>
-<p>Use NSOpenPanel and/or NSSavePanel to query the user for file and directory names and locations. </p>
-<ul>
-<li><a href="https://developer.apple.com/documentation/appkit/nsopenpanel">NSOpenPanel</a></li>
-</ul>
-
+<p>Use NSOpenPanel and/or NSSavePanel to query the user for file and directory names and locations.</p><ul><li><a href="https://developer.apple.com/documentation/appkit/nsopenpanel">NSOpenPanel</a></li></ul>
 
 <p>Link: <a href="https://developer.apple.com/library/archive/documentation/FileManagement/Conceptual/FileSystemProgrammingGuide/UsingtheOpenandSavePanels/UsingtheOpenandSavePanels.html">
 Apple Documentation Archive
