--- a/web/tips/server-side-swift-development.html
+++ b/web/tips/server-side-swift-development.html
@@ -37,9 +37,7 @@
 <p><em>Tags: server, web</em></p>
 
 
-<p>Swift can run on Linux as well as macOS, and can be used to develop Web applications.</p>
-<p>There are several different Web frameworks for Swift, but Vapor seems to be the most popular, especially with developers working outside of a large enterprise environment.</p>
-
+<p>Swift can run on Linux as well as macOS, and can be used to develop Web applications.</p><p>There are several different Web frameworks for Swift, but Vapor seems to be the most popular, especially with developers working outside of a large enterprise environment.</p>
 
 
 <p>Contributed by  on </p>
