--- a/web/tips/show-the-user-a-check-box.html
+++ b/web/tips/show-the-user-a-check-box.html
@@ -39,14 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: NSButton</p>
-<p>A check box allows the user to check or uncheck an option. A check box is a variation of a button on macOS, and uses the NSButton class. </p>
-<p>See the following links for helpful info:</p>
-<ul>
-<li><a href="https://developer.apple.com/design/human-interface-guidelines/macos/buttons/checkboxes/">Apple Human Interface Guidelines</a></li>
-<li><a href="https://developer.apple.com/library/archive/documentation/Cocoa/Conceptual/Button/Concepts/CheckBoxes.html">Apple Documentation Archive</a></li>
-<li><a href="https://www.raywenderlich.com/760-macos-controls-tutorial-part-2-2">Ray Wenderlich site</a></li>
-</ul>
-
+<p>A check box allows the user to check or uncheck an option. A check box is a variation of a button on macOS, and uses the NSButton class.</p><p>See the following links for helpful info:</p><ul><li><a href="https://developer.apple.com/design/human-interface-guidelines/macos/buttons/checkboxes/">Apple Human Interface Guidelines</a></li><li><a href="https://developer.apple.com/library/archive/documentation/Cocoa/Conceptual/Button/Concepts/CheckBoxes.html">Apple Documentation Archive</a></li><li><a href="https://www.raywenderlich.com/760-macos-controls-tutorial-part-2-2">Ray Wenderlich site</a></li></ul>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/nsbutton">
 Apple Developer Docs for NSButton
