--- a/web/tips/show-the-user-a-combo-box.html
+++ b/web/tips/show-the-user-a-combo-box.html
@@ -39,9 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: NSComboBox</p>
-<p>A Combo Box combines a text entry field with a dropdown list. The user can choose an item from the list, which will then populate the text field, or the user can type a value directly into the text field. </p>
-<p>See the <a href="https://www.raywenderlich.com/759-macos-controls-tutorial-part-1-2">Ray Wenderlich site</a> for more useful info on this topic.</p>
-
+<p>A Combo Box combines a text entry field with a dropdown list. The user can choose an item from the list, which will then populate the text field, or the user can type a value directly into the text field.</p><p>See the <a href="https://www.raywenderlich.com/759-macos-controls-tutorial-part-1-2">Ray Wenderlich site</a> for more useful info on this topic.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/nscombobox">
 Apple Developer Docs
