--- a/web/tips/show-the-user-a-simple-text-field.html
+++ b/web/tips/show-the-user-a-simple-text-field.html
@@ -39,9 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: NSTextField</p>
-<p>The NSTextField class is used for any sort of single-line text field, including field labels. </p>
-<p>It’s important to realize that NSTextField inherits from NSControl, and not from NSText. </p>
-
+<p>The NSTextField class is used for any sort of single-line text field, including field labels.</p><p>It's important to realize that NSTextField inherits from NSControl, and not from NSText.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/nstextfield">
 Apple Developer Docs
