--- a/web/tips/stop-your-running-project.html
+++ b/web/tips/stop-your-running-project.html
@@ -38,13 +38,7 @@
 
 <p>Type: Xcode Action</p>
 
-<p>To stop your running project, use one of the following actions:</p>
-<ul>
-<li>Menu item Product -&gt; Stop</li>
-<li>Stop Button (solid square)</li>
-<li>Keyboard shortcut CMD-.</li>
-</ul>
-
+<p>To stop your running project, use one of the following actions:</p><ul><li>Menu item Product -&gt; Stop</li><li>Stop Button (solid square)</li><li>Keyboard shortcut CMD-.</li></ul>
 
 
 <p>Contributed by  on </p>
