--- a/web/tips/try-and-catch.html
+++ b/web/tips/try-and-catch.html
@@ -38,20 +38,7 @@
 
 <p>Type: Language Syntax</p>
 
-<p>In order to call a method that might raise an error, you will need to do the following:</p>
-<ol>
-<li>
-<p>Precede one or more trys with a do;</p>
-</li>
-<li>
-<p>Try to execute one or more method calls</p>
-</li>
-<li>
-<p>Catch any errors that might have occurred. </p>
-</li>
-</ol>
-<p>See code snippet for an example. </p>
-
+<p>In order to call a method that might raise an error, you will need to do the following:</p><ol><li>Precede one or more trys with a do;</li></ol><ol start="2"><li>Try to execute one or more method calls</li></ol><ol start="3"><li>Catch any errors that might have occurred.</li></ol><p>See code snippet for an example.</p>
 
 <p>Link: <a href="https://docs.swift.org/swift-book/LanguageGuide/ErrorHandling.html">
 Swift Docs
