--- a/web/topics.html
+++ b/web/topics.html
@@ -106,6 +106,10 @@
 <ul>
 <li><a href="tips/cut-copy-and-paste-to-and-from-the-clipboard.html">Cut, Copy and Paste to and from the Clipboard</a></li>
 </ul>
+<h6>CocoaPods</h6>
+<ul>
+<li><a href="tips/switching-from-cocoapods-to-swift-package-manager.html">Switching from CocoaPods to Swift Package Manager</a></li>
+</ul>
 <h6>combo box</h6>
 <ul>
 <li><a href="tips/show-the-user-a-combo-box.html">Show the User a Combo Box</a></li>
@@ -144,6 +148,10 @@
 <h6>delete</h6>
 <ul>
 <li><a href="tips/delete-a-file-or-folder.html">Delete a File or Folder</a></li>
+</ul>
+<h6>dependencies</h6>
+<ul>
+<li><a href="tips/switching-from-cocoapods-to-swift-package-manager.html">Switching from CocoaPods to Swift Package Manager</a></li>
 </ul>
 <h6>do</h6>
 <ul>
@@ -221,7 +229,15 @@
 <ul>
 <li><a href="tips/log-noise.html">Log Noise</a></li>
 </ul>
+<h6>module</h6>
+<ul>
+<li><a href="tips/switching-from-cocoapods-to-swift-package-manager.html">Switching from CocoaPods to Swift Package Manager</a></li>
+</ul>
 <h5 class="centered"><a name="letter-P">- P -</h5>
+<h6>package</h6>
+<ul>
+<li><a href="tips/switching-from-cocoapods-to-swift-package-manager.html">Switching from CocoaPods to Swift Package Manager</a></li>
+</ul>
 <h6>paste</h6>
 <ul>
 <li><a href="tips/cut-copy-and-paste-to-and-from-the-clipboard.html">Cut, Copy and Paste to and from the Clipboard</a></li>
@@ -283,6 +299,10 @@
 <h6>tokens</h6>
 <ul>
 <li><a href="tips/token-fields.html">Token Fields</a></li>
+</ul>
+<h6>tools</h6>
+<ul>
+<li><a href="tips/switching-from-cocoapods-to-swift-package-manager.html">Switching from CocoaPods to Swift Package Manager</a></li>
 </ul>
 <h6>try</h6>
 <ul>
