--- a/web/tips/build-a-workspace.html
+++ b/web/tips/build-a-workspace.html
@@ -38,16 +38,7 @@
 
 <p>Type: Xcode Action</p>
 
-<p>A workspace is a way of combining multiple projects into a single work area. This is especially useful with projects that are dependent on one another. </p>
-<p>A workspace is stored on disk as a single file with the extension .xcworkspace. That file can be stored anywhere outside of the projects to be included in the workspace. When you open that file in Xcode (say, by double-clicking on it), then all of the projects in that workspace will open at the same time and all be accessible through a single window. </p>
-<p>Before creating a workspace, you should close any projects that you want to include in the workspace. </p>
-<p>After creating a new workspace, you should click the plus sign in the lower left corner of your project navigator, then add the .xcodeproj file for one of your projects. Repeat this step for each project you wish to have included in the workspace. </p>
-<p>Use the File / New Menu command to create a new Workspace.</p>
-<p>Also see this article in the Apple Developer Archive:</p>
-<ul>
-<li><a href="https://developer.apple.com/library/archive/featuredarticles/XcodeConcepts/Concept-Workspace.html">Xcode Workspace</a></li>
-</ul>
-
+<p>A workspace is a way of combining multiple projects into a single work area. This is especially useful with projects that are dependent on one another.</p><p>A workspace is stored on disk as a single file with the extension .xcworkspace. That file can be stored anywhere outside of the projects to be included in the workspace. When you open that file in Xcode (say, by double-clicking on it), then all of the projects in that workspace will open at the same time and all be accessible through a single window.</p><p>Before creating a workspace, you should close any projects that you want to include in the workspace.</p><p>After creating a new workspace, you should click the plus sign in the lower left corner of your project navigator, then add the .xcodeproj file for one of your projects. Repeat this step for each project you wish to have included in the workspace.</p><p>Use the File / New Menu command to create a new Workspace.</p><p>Also see this article in the Apple Developer Archive:</p><ul><li><a href="https://developer.apple.com/library/archive/featuredarticles/XcodeConcepts/Concept-Workspace.html">Xcode Workspace</a></li></ul>
 
 <p>Link: <a href="https://medium.com/@OddNetworks/using-xcode-workspaces-to-develop-with-the-oddsdk-ee4c0931b30e">
 Odd Networks on Medium
