--- a/web/tips/cut-copy-and-paste-to-and-from-the-clipboard.html
+++ b/web/tips/cut-copy-and-paste-to-and-from-the-clipboard.html
@@ -39,46 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: NSPasteboard</p>
-<p>In my <a href="https://github.com/hbowie/notenik-swift">macOS Notenik app</a> I wanted to add the ability for the user to cut, copy and paste entire Notes using the traditional Edit menu commands and their usual keyboard shortcuts.</p>
-<p>Even though this seemed like a relatively simple and common thing to do, I had a rough time finding complete and current guidance on how to do this, so I thought I’d write something up to make this easier on others.</p>
-<p>(Note that this tip has nothing to do with <a href="copy-objects-in-swift.html">copying a custom object</a>, which makes use of the NSCopying protocol.)</p>
-<p>The first thing to do is to add the following code to an appropriate point in the <a href="responder-chain.html">responder chain</a>.</p>
-<pre><code>/// Copy the selected item to the system clipboard.
-@IBAction func copy(_ sender: AnyObject?) {
-    print(&quot;Copy an item&quot;)
-}
-
-/// Copy the selected item to the system clipboard and then
-/// attempt to delete the item.
-@IBAction func cut(_ sender: AnyObject?) {
-    print(&quot;Cut an item&quot;)
-}
-
-/// Paste the passed items found in the system clipboard.
-@IBAction func paste(_ sender: AnyObject?) {
-    print(&quot;Paste an item&quot;)
-} 
-</code></pre>
-<p>I added this to my NSWindowController, named ‘CollectionWindowController’.</p>
-<p>Once you add this code, then the Cut, Copy and Paste options under the Edit menu should no longer be grayed out, indicating that they are now available.</p>
-<p>The next trick here is storing and retrieving information from the system clipboard.</p>
-<p>Here’s the code to paste something to the clipboard. It makes things simpler that I’m just passing a Note as a simple String (here identified as ‘str’).</p>
-<pre><code>let board = NSPasteboard.general
-board.clearContents()
-board.setString(str, forType: NSPasteboard.PasteboardType.string)
-</code></pre>
-<p>And now here’s the code to retrieve info from the clipboard.</p>
-<pre><code>let board = NSPasteboard.general
-guard let items = board.pasteboardItems else { return }
-for item in items {
-	let str = item.string(forType: NSPasteboard.PasteboardType.string)
-	if str != nil &amp;&amp; str!.count &gt; 0 {
-			// Do something with the passed string.
-	} // End if we found a good string
-} // end for each item
-</code></pre>
-<p>Hope others find this helpful!</p>
-
+<p>In my <a href="https://github.com/hbowie/notenik-swift">macOS Notenik app</a> I wanted to add the ability for the user to cut, copy and paste entire Notes using the traditional Edit menu commands and their usual keyboard shortcuts.</p><p>Even though this seemed like a relatively simple and common thing to do, I had a rough time finding complete and current guidance on how to do this, so I thought I'd write something up to make this easier on others.</p><p>(Note that this tip has nothing to do with <a href="copy-objects-in-swift.html">copying a custom object</a>, which makes use of the NSCopying protocol.)</p><p>The first thing to do is to add the following code to an appropriate point in the <a href="responder-chain.html">responder chain</a>.</p><p>/// Copy the selected item to the system clipboard. @IBAction func copy(_ sender: AnyObject?) { print("Copy an item") }</p><p>/// Copy the selected item to the system clipboard and then /// attempt to delete the item. @IBAction func cut(_ sender: AnyObject?) { print("Cut an item") }</p><p>/// Paste the passed items found in the system clipboard. @IBAction func paste(_ sender: AnyObject?) { print("Paste an item") }</p><p>I added this to my NSWindowController, named 'CollectionWindowController'.</p><p>Once you add this code, then the Cut, Copy and Paste options under the Edit menu should no longer be grayed out, indicating that they are now available.</p><p>The next trick here is storing and retrieving information from the system clipboard.</p><p>Here's the code to paste something to the clipboard. It makes things simpler that I'm just passing a Note as a simple String (here identified as 'str').</p><p>let board = NSPasteboard.general board.clearContents() board.setString(str, forType: NSPasteboard.PasteboardType.string)</p><p>And now here's the code to retrieve info from the clipboard.</p><p>let board = NSPasteboard.general	guard let items = board.pasteboardItems else { return }	for item in items {	let str = item.string(forType: NSPasteboard.PasteboardType.string)	if str != nil &amp;&amp; str!.count &gt; 0 {	// Do something with the passed string.	} // End if we found a good string	} // end for each item</p><p>Hope others find this helpful!</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/nspasteboard">
 Apple Developer Docs
