--- a/web/tips/do-things-with-the-file-system.html
+++ b/web/tips/do-things-with-the-file-system.html
@@ -39,10 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: NSFileManager</p>
-<p>Use NSFileManager for both information about, and operations on, the local file system. </p>
-<p>Note that you can typically use the provided singleton, named ‘default’, rather than creating your own.</p>
-<p>Note also that many of the NSFileManager methods can throw errors, so you will need to use the [do-try-catch syntax] to provide the appropriate handling in the event of an error. </p>
-
+<p>Use NSFileManager for both information about, and operations on, the local file system.</p><p>Note that you can typically use the provided singleton, named 'default', rather than creating your own.</p><p>Note also that many of the NSFileManager methods can throw errors, so you will need to use the [do-try-catch syntax] to provide the appropriate handling in the event of an error.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/foundation/nsfilemanager">
 Apple Developer Docs
