--- a/web/tips/file-paths-and-urls.html
+++ b/web/tips/file-paths-and-urls.html
@@ -38,15 +38,7 @@
 
 
 <p>Class: URL</p>
-<p>It’s good to keep in mind that you can actually point to a file or folder programmatically in three distinct ways:</p>
-<ol>
-<li>A URL</li>
-<li>A String containing a file path – typically starting with a forward slash to indicate the system root. </li>
-<li>A String representation of a URL pointing to the file location, typically starting with ‘file:///’.</li>
-</ol>
-<p>(And this is not even counting relative paths or path components!)</p>
-<p>See the code snippets for examples of how to convert back and forth between these representations. </p>
-
+<p>It's good to keep in mind that you can actually point to a file or folder programmatically in three distinct ways:</p><ol><li>A URL</li><li>A String containing a file path -- typically starting with a forward slash to indicate the system root.</li><li>A String representation of a URL pointing to the file location, typically starting with 'file:///'.</li></ol><p>(And this is not even counting relative paths or path components!)</p><p>See the code snippets for examples of how to convert back and forth between these representations.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/foundation/url">
 Apple Developer Docs
