--- a/web/tips/format-a-number-as-a-string-with-leading-zeros.html
+++ b/web/tips/format-a-number-as-a-string-with-leading-zeros.html
@@ -38,9 +38,7 @@
 
 
 <p>Class: String</p>
-<p>There is a special initializer for the String class that takes a format argument. </p>
-<p>Also see this Q&amp;A on <a href="https://stackoverflow.com/questions/25566581/leading-zeros-for-int-in-swift">Stack Overflow</a>.</p>
-
+<p>There is a special initializer for the String class that takes a format argument.</p><p>Also see this Q&amp;A on <a href="https://stackoverflow.com/questions/25566581/leading-zeros-for-int-in-swift">Stack Overflow</a>.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/swift/string">
 Apple Developer Docs
