--- a/web/tips/run-your-project.html
+++ b/web/tips/run-your-project.html
@@ -38,13 +38,7 @@
 
 <p>Type: Xcode Action</p>
 
-<p>When you are ready to build and run your project, use any of the following actions within Xcode:</p>
-<ul>
-<li>Click on the button with the Play Triangle</li>
-<li>Use the menu item Product -&gt; Run</li>
-<li>Use the keyboard shortcut CMD-R</li>
-</ul>
-
+<p>When you are ready to build and run your project, use any of the following actions within Xcode:</p><ul><li>Click on the button with the Play Triangle</li><li>Use the menu item Product -&gt; Run</li><li>Use the keyboard shortcut CMD-R</li></ul>
 
 
 <p>Contributed by Herb Bowie on 28 Oct 2019</p>
