--- a/web/tips/show-the-assistant-editor.html
+++ b/web/tips/show-the-assistant-editor.html
@@ -38,12 +38,7 @@
 
 <p>Type: Xcode Action</p>
 
-<p>Use any of the following actions to show the Assistant Editor without hiding the storyboard in the Main Editor.</p>
-<ul>
-<li>Menu item View -&gt; Assistant Editor -&gt; Show Assistant Editor</li>
-<li>Keyboard shortcut ALT-CMD-RETURN</li>
-</ul>
-
+<p>Use any of the following actions to show the Assistant Editor without hiding the storyboard in the Main Editor.</p><ul><li>Menu item View -&gt; Assistant Editor -&gt; Show Assistant Editor</li><li>Keyboard shortcut ALT-CMD-RETURN</li></ul>
 
 
 <p>Contributed by Herb Bowie on 28 Oct 2019</p>
