--- a/web/tips/show-the-object-library.html
+++ b/web/tips/show-the-object-library.html
@@ -38,12 +38,7 @@
 
 <p>Type: Xcode Action</p>
 
-<p>Use any of the following actions to bring up the Object Library, allowing selection of a new object to add to the user interface:</p>
-<ul>
-<li>Menu item View -&gt; Libraries -&gt; Show Library</li>
-<li>Keyboard shortcut SHIFT-CMD-L</li>
-</ul>
-
+<p>Use any of the following actions to bring up the Object Library, allowing selection of a new object to add to the user interface:</p><ul><li>Menu item View -&gt; Libraries -&gt; Show Library</li><li>Keyboard shortcut SHIFT-CMD-L</li></ul>
 
 
 <p>Contributed by Herb Bowie on 28 Oct 2019</p>
