--- a/web/tips/show-the-user-a-label.html
+++ b/web/tips/show-the-user-a-label.html
@@ -39,9 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: NSTextField</p>
-<p>Within Interface Builder, you can search the Object Library for ‘label’ and find a couple of options. If you want to build a label programmatically, though, you’ll need to realize that, on macOS, Cocoa only provides you with an NSTextField, and you’ll need to appropriately tweak the attributes to create something that effectively serves as a label. </p>
-<p>For additional helpful info, see this <a href="https://medium.com/hyperoslo/how-to-make-a-label-in-macos-150f53ce86fd">Medium piece</a>.</p>
-
+<p>Within Interface Builder, you can search the Object Library for 'label' and find a couple of options. If you want to build a label programmatically, though, you'll need to realize that, on macOS, Cocoa only provides you with an NSTextField, and you'll need to appropriately tweak the attributes to create something that effectively serves as a label.</p><p>For additional helpful info, see this <a href="https://medium.com/hyperoslo/how-to-make-a-label-in-macos-150f53ce86fd">Medium piece</a>.</p>
 
 <p>Link: <a href="https://developer.apple.com/documentation/appkit/nstextfield">
 Apple Developer Docs
