--- a/web/tips/singleton.html
+++ b/web/tips/singleton.html
@@ -37,9 +37,7 @@
 <p><em>Tags: Swift</em></p>
 
 
-<p>The singleton pattern is a software design pattern that restricts the instantiation of a class to one single instance. This is useful when exactly one object is needed to coordinate actions across a system. Apple makes use of the singleton pattern for the FileManager and UserDefaults classes, as examples. But the Swift language makes it easy for you to write your own singletons as well. </p>
-<p>Note that the single static instance of a singleton class is usually named ‘shared’ or ‘standard’ or ‘default’. </p>
-
+<p>The singleton pattern is a software design pattern that restricts the instantiation of a class to one single instance. This is useful when exactly one object is needed to coordinate actions across a system. Apple makes use of the singleton pattern for the FileManager and UserDefaults classes, as examples. But the Swift language makes it easy for you to write your own singletons as well.</p><p>Note that the single static instance of a singleton class is usually named 'shared' or 'standard' or 'default'.</p>
 
 <p>Link: <a href="https://medium.com/@nimjea/singleton-class-in-swift-17eef2d01d88">
 Anand Nimje on Medium
