--- a/web/tips/store-and-retrieve-user-preferences.html
+++ b/web/tips/store-and-retrieve-user-preferences.html
@@ -39,13 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: UserDefaults</p>
-<p>The UserDefaults class provides a programmatic interface for interacting with the defaults system. The defaults system allows an app to customize its behavior to match a user’s preferences. For example, you can allow users to specify their preferred units of measurement or media playback speed. Apps store these preferences by assigning values to a set of parameters in a user’s defaults database. The parameters are referred to as defaults because they’re commonly used to determine an app’s default state at startup or the way it acts by default.</p>
-<p>Note that not all of the getters return optional values when no value can be found for the indicated key. Getters that return numeric values tend to return zeroes, and the boolean getter returns false when the key can’t be found.  </p>
-<p>Additional link:</p>
-<ul>
-<li><a href="https://www.hackingwithswift.com/read/12/2/reading-and-writing-basics-userdefaults">Hacking with Swift</a></li>
-</ul>
-
+<p>The UserDefaults class provides a programmatic interface for interacting with the defaults system. The defaults system allows an app to customize its behavior to match a user’s preferences. For example, you can allow users to specify their preferred units of measurement or media playback speed. Apps store these preferences by assigning values to a set of parameters in a user’s defaults database. The parameters are referred to as defaults because they’re commonly used to determine an app’s default state at startup or the way it acts by default.</p><p>Note that not all of the getters return optional values when no value can be found for the indicated key. Getters that return numeric values tend to return zeroes, and the boolean getter returns false when the key can't be found.</p><p>Additional link:</p><ul><li><a href="https://www.hackingwithswift.com/read/12/2/reading-and-writing-basics-userdefaults">Hacking with Swift</a></li></ul>
 
 <p>Link: <a href="https://developer.apple.com/documentation/foundation/userdefaults">
 Apple Developer Documentation
