--- a/web/tips/token-fields.html
+++ b/web/tips/token-fields.html
@@ -39,13 +39,7 @@
 <p>Type: API</p>
 
 <p>Class: NSTokenField</p>
-<p>A token field is a type of text field that includes tokens, blocks of text that can be easily selected and manipulated.</p>
-<p>Additional Links:</p>
-<ul>
-<li><a href="https://developer.apple.com/documentation/appkit/nstokenfield">Apple Developer Documentation for NSTokenField</a></li>
-<li><a href="https://developer.apple.com/documentation/appkit/nstokenfielddelegate">Apple Developer Docs for NSTokenFieldDelegate Protocol</a></li>
-</ul>
-
+<p>A token field is a type of text field that includes tokens, blocks of text that can be easily selected and manipulated.</p><p>Additional Links:</p><ul><li><a href="https://developer.apple.com/documentation/appkit/nstokenfield">Apple Developer Documentation for NSTokenField</a></li><li><a href="https://developer.apple.com/documentation/appkit/nstokenfielddelegate">Apple Developer Docs for NSTokenFieldDelegate Protocol</a></li></ul>
 
 <p>Link: <a href="https://developer.apple.com/design/human-interface-guidelines/macos/fields-and-labels/token-fields/">
 Apple Human Interface Guidelines
